[package]
name = "Rust_RT_One_Weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
simple-stopwatch = "0.1.2"
lazy_static = "1.4.0"
num = "0.4.0"
queues = "1.1.0"
rayon = "1.5.1"
stb_image = "0.2.4"
memory-stats = "1.0.0"
criterion = "0.3"

tracing-core = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry"] }

tracing = "0.1"
tracing-tracy = {version="0.9.0", features=[]}

#[[bench]]
#name = "it_rec_bench"
#harness = false


[profile.release]
debug = true

[profile.dev]
opt-level = 0
debug = true